Шрифты для Android 2.x, Less UPD
То, что мешало работе шрифтов на андроде я закомментил. Право не очень
понимаю, для чего эти строки были.
Убрал старые less.js-файлы, less.min.js обновил до стабильной версии
1.7.4

--- a/css/font.less
+++ b/css/font.less
@@ -11,6 +11,7 @@
 	font-weight: normal;
 	font-style: normal;
 }
+/* Именно это лишнее для работы шрифтов на Android 2.1-2.3
 @media screen and (max-device-width: 480px) {
   @font-face {
     font-family: "icomoon";
@@ -18,7 +19,7 @@
     url("@{fontPath}/icomoon.ttf") format("truetype"),
     url("@{fontPath}/icomoon.svg#icomoon") format("svg");
 }}
-
+*/
 .font-opacity {
 	opacity: 1;
 }
